Fix cards on small screens.

--- a/assets/new-styles/page.css
+++ b/assets/new-styles/page.css
@@ -1256,7 +1256,7 @@ body:has(.search-container) {
     width: 150px;
   }
 
-  .info-container {
+  .artwork-card .info-container {
     margin-left: 170px;
   }
 
@@ -1416,7 +1416,7 @@ body:has(.search-container) {
       width: 100px;
     }
 
-    .info-container {
+    .artwork-card .info-container {
       margin-left: 120px;
     }
 
